fix spacing @max-width: 800 + 750

--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ a[href^=tel] {
   z-index: 20;
   width: 18%;
   border: 10px solid white;
-  box-shadow: 0px 0px 0px 10px #eee;
+  box-shadow: 0 0 0 10px #eee;
   margin-bottom: 50px; }
   #portrait img {
     width: 100%; }
@@ -211,7 +211,7 @@ a[href^=tel] {
   max-width: 280px;
   height: auto;
   border: 10px solid white;
-  box-shadow: 0px 0px 0px 10px #eee; }
+  box-shadow: 0 0 0 10px #eee; }
   .johnLarge img {
     width: 100%; }
 
@@ -232,7 +232,7 @@ a[href^=tel] {
     padding: 0; }
   #nav li {
     display: inline;
-    padding: 10px 0 10px;
+    padding: 10px 0;
     width: 33%;
     text-align: center; }
     #nav li:hover {
@@ -245,7 +245,7 @@ a[href^=tel] {
   float: left; }
 
 .bio p {
-  padding: 0 3% 0 3%;
+  padding: 0 3%;
   font-family: 'Mandali', sans-serif;
   margin-bottom: 40px; }
 
@@ -290,7 +290,7 @@ a[href^=tel] {
       text-align: right;
       color: #333;
       text-decoration: underline;
-      margin: 0px 10px 5px 0; }
+      margin: 0 10px 5px 0; }
   .cell:hover {
     width: 30%;
     z-index: 1000; }
@@ -307,7 +307,7 @@ a[href^=tel] {
   margin-bottom: 50px; }
 
 .proWrap {
-  padding: 25px 25px 0 25px; }
+  padding: 25px 25px 0; }
   .proWrap:after {
     content: '';
     display: table;
@@ -398,7 +398,7 @@ footer .social-buttons {
       -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
       transition: all 0.3s; }
-      footer .social-buttons li a:hover, footer .social-buttons li a:focus, footer .social-buttons li a:active {
+      footer .social-buttons li a:active, footer .social-buttons li a:focus, footer .social-buttons li a:hover {
         color: white;
         text-decoration: none; }
 
@@ -435,6 +435,10 @@ footer .social-buttons {
     padding-left: 28%;
     width: 72%; } }
 @media (max-width: 800px) {
+  .spacer {
+    width: 36%;
+    height: 96px; }
+
   .johnLarge {
     width: 200px;
     top: 150px; }
@@ -446,5 +450,17 @@ footer .social-buttons {
   .heroContainer #title {
     font-size: 4vw;
     text-align: center; } }
+@media (max-width: 750px) {
+  .johnLarge {
+    width: 200px;
+    top: 150px; }
+
+  #nav {
+    padding-left: 39%;
+    width: 61%; }
+
+  .spacer {
+    width: 41%;
+    height: 96px; } }
 
 /*# sourceMappingURL=styles.css.map */
